fix the list of the ul at the navbar and started getting the idea of the backend

--- a/Client/src/styles/NavigationBar.css
+++ b/Client/src/styles/NavigationBar.css
@@ -16,3 +16,10 @@ a {
 .SignOut {
 	cursor: pointer;
 }
+
+ul {
+	display: flex;
+	max-width: 200px;
+	list-style: none;
+	justify-content: space-evenly;
+}
